create skill stat tab to statistics screen